<resources>
    <string name="app_name">Prueba01DSM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="basics_terms">Conceptos Básicos</string>
    <string name="shared_preferences">Shared Preferences + Sounds + Url Navigation</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="code">codigo</string>
    <string name="descripcion">descripcion</string>
    <string name="precio">precio</string>
    <string name="Registrar">Registrar Producto</string>
    <string name="BuscarProducto">Buscar Producto</string>
    <string name="editar">Editar Producto</string>
    <string name="Eliminar">Eliminar Producto</string>

</resources>